# Ipon

./: .gitignore  README.md  biome.json  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/goals/: route.ts
app/api/health/: route.ts
app/api/stats/: route.ts
app/dashboard/: page.tsx
app/dashboard/create/: page.tsx
app/goals/[id]/: page.tsx
app/stats/: page.tsx
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile  README.md
contracts/goal-vault/: Cargo.toml
contracts/goal-vault/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/goal-vault/test_snapshots/test/: deposit_locks_funds_and_tracks_balance.1.json  deposit_to_withdrawn_goal_fails.1.json  deposit_while_paused_fails.1.json  deposit_zero_target_fails.1.json  double_initialize_fails.1.json  goals_are_isolated_per_saver.1.json  initialize_records_admin_and_token.1.json  multiple_deposits_accumulate_and_reach_target.1.json  withdraw_returns_full_balance_and_closes_goal.1.json  withdraw_twice_fails.1.json  withdraw_works_even_while_paused.1.json
contracts/scripts/: deploy.sh
contracts/ts-client/: goal-vault-client.ts
docs/: ARCHITECTURE.md
src/server/config/: env.public.ts  env.ts  stellar.ts
src/server/controller/: auth.controller.ts
src/server/db/: client.ts
src/server/lib/: amount.ts
src/server/middleware/: compose.ts
src/server/service/: auth.service.ts  stats.service.ts  (+1 more)
tests/: setup.ts
tests/e2e/: lite-demo.spec.ts  prod-real.spec.ts
(+24 files in other folders)
