[package]
name = "goal-vault"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Soroban goal-based savings vault: savers lock XLM (or any SAC) toward a named target, funds held in-contract, withdraw to self. Powers the Ipon app."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
